[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/Maps/Maps.gd" type="Script" id=1]
[ext_resource path="res://Resource/Background/Top/Winter/smaller_mountains.png" type="Texture" id=2]
[ext_resource path="res://Resource/Background/Top/Winter/big_mountain.png" type="Texture" id=3]
[ext_resource path="res://Resource/Background/Top/Winter/snowy_foreground_area_3x.png" type="Texture" id=4]

[node name="WinterBackground" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ParallaxBackground" parent="."]

[node name="Layer1" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2( 870, 0 )

[node name="Sprite" type="Sprite" parent="Background/Layer1"]
position = Vector2( 574, 102 )
texture = ExtResource( 3 )

[node name="Layer2" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2( 748, 0 )

[node name="Sprite" type="Sprite" parent="Background/Layer2"]
position = Vector2( 372, 103 )
scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 2 )

[node name="Layer3" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2( 748, 0 )

[node name="Sprite" type="Sprite" parent="Background/Layer3"]
position = Vector2( 372, 105 )
scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 2 )

[node name="Layer4" type="ParallaxLayer" parent="Background"]
position = Vector2( 0, 2 )
motion_mirroring = Vector2( 748, 0 )

[node name="Sprite" type="Sprite" parent="Background/Layer4"]
position = Vector2( 186, 191 )
scale = Vector2( 0.65, 0.65 )

[node name="Layer5" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2( 747, 0 )

[node name="Sprite" type="Sprite" parent="Background/Layer5"]
position = Vector2( 373, 174 )
scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 4 )

[node name="Ground" type="ParallaxBackground" parent="."]
visible = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="Ground"]
motion_mirroring = Vector2( 320, 0 )

[node name="Sprite" type="Sprite" parent="Ground/ParallaxLayer"]
position = Vector2( 200, 312 )
